<resources>
    <string name="app_name">KetoScanner</string>
    <string name="search">Search</string>
    <string name="open_scanner">Open scanner</string>
    <string name="enter_barcode">Enter barcode</string>
    <string name="ok">OK</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="back_button">Back button</string>
    <string name="product_name">Product Name</string>
    <string name="product_analyze_icon_result">Product analyze icon result</string>
    <string name="preference_analysis">Preference analysis</string>
    <string name="product_image">Product Image</string>
    <string name="result_type_image">Result Type Image</string>
    <string name="menu_button">Menu button</string>
    <string name="or">or</string>
    <string name="product_not_found">Product not found</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="exampleBarcode">04963406</string>
    <string name="analysis_results">Analysis results</string>
    <string name="result_summary_image">Result summary image</string>
    <string name="results">Results</string>
    <string name="nutrients">Nutrients</string>
    <string name="bottom_navigation_favourites">Favourites</string>
    <string name="bottom_navigation_scan">Scan</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="home_history">History</string>
    <string name="home_last_searches">last 10 searches</string>
    <string name="add_to_favourites_button">Add to favourites button</string>
    <string name="product_brand">Brand</string>
    <string name="carbs_result_summary_image">Carb result summary description</string>
    <string name="good_for_keto_summary">Good for your diet preferences</string>
    <string name="neutral_for_keto_summary">Neutral for your diet preferences</string>
    <string name="not_advised_for_keto_summary">Not advised for your diet preferences</string>
    <string name="not_advised_for_keto_details">> %d g carbs per 100 g</string>
    <string name="neutral_for_keto_details">&lt; %d g carbs per 100 g</string>
    <string name="good_for_keto_details">&lt; %d g carbs per 100 g</string>
    <string name="maxServingResultDetailsText">%.0f g/ml (%d g carbs) </string>
    <string name="maximum_portion">Maximum portion</string>
    <string name="macros">Macros</string>
    <string name="energy">Energy</string>
    <string name="fats">Fats</string>
    <string name="proteins">Proteins</string>
    <string name="carbs">Carbs</string>
    <string name="salt">Salt</string>
    <string name="per_serving_with_value">per serving - %s g/ml</string>
    <string name="per_100g">per 100 g/ml</string>
    <string name="value_with_g">%.1f g</string>
    <string name="value_with_kcal">%.0f kcal</string>
    <string name="product_has_been_added_to_favourites">Product has been added to favourites</string>
    <string name="favourite_products">Favourite products</string>
    <string name="product_icon">Product image</string>
    <string name="product_has_been_removed_from_favourites">Product has been removed from favourites</string>
    <string name="image_preview">Image preview</string>
    <string name="default_macronutrients_text">-</string>
    <string name="lack_of_required_information">Lack of required information</string>
    <string name="per_serving">Per serving</string>
    <string name="search_by_name">Search by name</string>
    <string name="home_menu_macronutrients">Macronutrients</string>
    <string name="about">About</string>
    <string name="there_should_be_about_screen">There should be about screen</string>
    <string name="preferences_is_on_keto_title">Are you on Keto diet?</string>
    <string name="preferences_max_carb_amount_title">Carbohydrates amount</string>
    <string name="preferences_max_carb_amount_summary">Maximal daily carbohydrates consumption: %d</string>
    <string name="preferences_category_diet">Diet</string>
</resources>