<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginTop="@dimen/normal_100"
        android:background="@drawable/transparent_black_circle"
        android:contentDescription="@string/back_button"
        android:elevation="1dp"
        android:padding="@dimen/small_100"
        android:src="@drawable/arrow_back_white_32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_100"
        android:layout_marginEnd="@dimen/normal_100"
        android:background="@drawable/transparent_black_circle"
        android:contentDescription="@string/menu_button"
        android:elevation="1dp"
        android:padding="@dimen/small_100"
        android:src="@drawable/more_vertical_white_32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/transparent_black"
        android:contentDescription="@string/product_image"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/example_product_photo" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="@dimen/normal_100"
        android:text="@string/product_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_125"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productImage" />

    <LinearLayout
        android:id="@+id/analysisResultsContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productName">

        <include layout="@layout/macronutrients_result_view"/>

    </LinearLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/productAnalysisProgressBar"
        style="@android:style/Widget.Material.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/analysisResultsContainer"
        app:layout_constraintEnd_toEndOf="@+id/analysisResultsContainer"
        app:layout_constraintStart_toStartOf="@+id/analysisResultsContainer"
        app:layout_constraintTop_toTopOf="@+id/analysisResultsContainer"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>